# RAT

./: Cargo.toml  README.md  makefile
src/: c2.rs  zombie.rs
src/c2s/: display_video_feed.rs  mod.rs  routes_http.rs  routes_sockets.rs
src/c2s/services/: mod.rs  on_connect.rs
src/c2s/types/: client_store.rs  mod.rs
src/constants/: localhost.rs
src/utils/: get_public_ip.rs  mod.rs
src/utils/base64/: decode_base64_to_file.rs  encode_file_to_base64.rs  mod.rs
src/utils/types/: command_payload.rs  mod.rs
src/zombies/: create_zombie_service.rs  mod.rs  run_command.rs
src/zombies/commands/: cd.rs  download.rs  mod.rs  see_screen.rs
