[package]
name = "RAT"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c2"
path = "src/c2.rs"

[[bin]]
name = "zombie"
path = "src/zombie.rs"

[profile.release]
opt-level = 3       
lto = true          
debug = false       
codegen-units = 1   

[dependencies]
futures-util = "0.3.30"
reqwest = {version = "0.12.5", features = ["json"]}
serde = "1.0.207"
tokio = {version = "1.39.2", features = ["full"]}
tokio-tungstenite = "0.23.1"
url = "2.5.2"
warp = "0.3.7"
